[gd_scene load_steps=4 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.0
margin_right = 31.0
margin_bottom = 20.0
rect_scale = Vector2( 4.35022, 4.36459 )
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="LifeLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -55.0
margin_right = -42.0
margin_bottom = 20.0
rect_scale = Vector2( 4.35022, 4.36459 )
custom_fonts/font = SubResource( 1 )
text = "5"

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.814
margin_top = -195.641
margin_right = -127.814
margin_bottom = -129.641
rect_scale = Vector2( 4.35022, 4.36459 )
custom_fonts/font = SubResource( 1 )
text = "Kill the pests!
"
align = 1
valign = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.5737
margin_top = -159.627
margin_right = -39.5737
margin_bottom = -139.627
rect_scale = Vector2( 4.75844, 4.94209 )
text = "Start"

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_Button_pressed"]
